@@ -210,14 +210,15 @@ public class SubMatrix implements java.io.Serializable {
   }
 
   public String toString() {
-    String result = "";
+    StringBuilder result = new StringBuilder();
     for (int i = 0; i < this.getRows(); i++) {
       for (int j = 0; j < this.getColumns(); j++) {
-        result += this.get(i, j) + "\t";
+        result.append(this.get(i, j));
+        result.append('\t');
       }
-      result += "\n";
+      result.append('\n');
     }
-    return result;
+    return result.toString();
   }
 }
 
